Changes to Login Form

--- a/StudentEnrolmentWebApp/Pages/Shared/LoginForm.cshtml
+++ b/StudentEnrolmentWebApp/Pages/Shared/LoginForm.cshtml
@@ -1,6 +1,15 @@
 ﻿@page
 @model StudentEnrolmentWebApp.Pages.Shared.LoginFormModel
 @{
+
+ <!DOCTYPE html>
+<html>
+<head>
+    <title>Login Form</title>
+</head>
+<body>
+    <h2>Login Form</h2>
+
     <form method="post">
         <div class="form-group">
             <label for="UserName">Username:</label>
@@ -11,4 +20,6 @@
             <input type="text" id="Password" name="Password" class="form-control" required>
         </div>
     </form>
+</body>
+</html>
 }
