Update migrations run and created database using Entity Framework

--- a/StudentEnrolmentWebApp/Pages/Shared/LoginForm.cshtml
+++ b/StudentEnrolmentWebApp/Pages/Shared/LoginForm.cshtml
@@ -19,6 +19,14 @@
             <label for="Password">Password:</label>
             <input type="text" id="Password" name="Password" class="form-control" required>
         </div>
+
+            <br>
+
+            <input type="submit" value="Login">
+
+            <!-- Link to the registration page -->
+            <p>Don't have an account? <a href="/Home/Register">Register here</a>.</p>
+
     </form>
 </body>
 </html>
