--- a/StudentEnrolmentWebApp/Pages/LoginForm.cshtml
+++ b/StudentEnrolmentWebApp/Pages/LoginForm.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model StudentEnrolmentWebApp.Pages.Shared.LoginFormModel
+@model LoginFormModel
 @{
 
  <!DOCTYPE html>
@@ -25,7 +25,7 @@
             <input type="submit" value="Login">
 
             <!-- Link to the registration page -->
-            <p>Don't have an account? <a href="/Home/Register">Register here</a>.</p>
+            <p>Don't have an account? <a href="./Register">Register here</a></p>
 
     </form>
 </body>
