--- a/StudentEnrolmentWebApp/Pages/Registration.cshtml
+++ b/StudentEnrolmentWebApp/Pages/Registration.cshtml
@@ -28,8 +28,9 @@
                 <input asp-for="Registration.Password" class="form-control" />
                 <span asp-validation-for="Registration.Password" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
