Changes to UserInfo view

--- a/StudentEnrolmentWebApp/Pages/UserInfo.cshtml
+++ b/StudentEnrolmentWebApp/Pages/UserInfo.cshtml
@@ -33,8 +33,9 @@
                 <input asp-for="UserInfo.Password" class="form-control" />
                 <span asp-validation-for="UserInfo.Password" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add User" class="btn btn-primary" />
             </div>
         </form>
     </div>
