--- a/StudentEnrolmentWebApp/Pages/Shared/_Layout.cshtml
+++ b/StudentEnrolmentWebApp/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,15 @@
                             <a class="nav-link" asp-controller="Student" asp-action="Index">Student</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-controller="Course" asp-action="Index">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Department" asp-action="Index">Departments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Instructor" asp-action="Index">Instructors</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
